<resources>
    <string name="app_name">Shoppie</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="find_products_near_by_your_nlocation">Find products near by your\nlocation</string>
    <string name="shoppie">Shoppie</string>
    <string name="login">Login</string>
    <string name="good_to_see_you_back">Good to see you back!</string>
    <string name="email_phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_n_account">Create\nAccount</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="username">username</string>
    <string name="banner">banner</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello">Hello ,   </string>
    <string name="Lorem_ispum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit luctus libero ac vulputate.</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="new_items">New Items</string>
    <string name="homepage_image">Homepage Image</string>
    <string name="announcement">Announcement</string>
    <string name="search">Search</string>

    <string name="product_title_name">Product Title Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="flashsale">Flash Sale</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="personal">Personal</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="order_history">Order History</string>
    <string name="account">Account</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="about_shoppie">About Shoppie</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="your_wishlist">Wishlist</string>
    <string name="_1">1</string>


</resources>