<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_screen"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="17dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/heart_icon"
        app:layout_constraintBottom_toBottomOf="@+id/good_to_see_you_text"
        app:layout_constraintStart_toEndOf="@+id/good_to_see_you_text"
        app:layout_constraintTop_toTopOf="@+id/good_to_see_you_text"
        />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="370dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/password_text"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="610dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/good_to_see_you_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_light"
        android:text="@string/good_to_see_you_back"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />
    <EditText
        android:id="@+id/email_phone_Number_text"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/email_phone_number"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="780dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_your_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="202dp"
        android:layout_height="54dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="850dp"
        android:background="@drawable/btn_splash"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/primary_color"
        android:textColorLink="#00B2FE"
        app:iconTint="#CDDC39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#00BCD4"
        app:strokeColor="#B21B1B" />

</androidx.constraintlayout.widget.ConstraintLayout>