<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:background="@drawable/create_account_screen_background"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="-550dp" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/create_n_account"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/email"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/email"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/phone_number"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/phone_number"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="610dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/create"
        android:layout_width="202dp"
        android:layout_height="54dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="850dp"
        android:background="@drawable/btn_splash"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/primary_color"
        android:textColorLink="#00B2FE"
        app:iconTint="#CDDC39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#00BCD4"
        app:strokeColor="#B21B1B" />




</androidx.constraintlayout.widget.ConstraintLayout>