<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.HomePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/dark_grey"
                android:backgroundTintMode="src_atop"
                android:clickable="true"
                android:elevation="50dp"
                android:focusable="true"
                 />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/light_grey"
                android:backgroundTintMode="multiply"
                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:elevation="3dp"
                android:hint="@string/search"
                android:outlineAmbientShadowColor="@color/dark_grey"
                android:paddingTop="2dp" />

            <ImageView
                android:id="@+id/notificationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/dark_grey"
                android:backgroundTintMode="src_atop"
                android:elevation="100dp"
                android:src="@drawable/notification_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/raleway_semibold"
            android:paddingTop="20sp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_semibold"
                android:paddingTop="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@color/dark_grey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/announcement"
                android:textStyle="bold"
                android:textSize="14sp"
                android:fontFamily="@font/raleway"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lorem_ispum"
                android:textStyle="normal"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway_semibold"
                />

        </LinearLayout>
        <ImageView
            android:id="@+id/home_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:contentDescription="@string/homepage_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:weightSum="2">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:fontFamily="@font/raleway"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:fontFamily="@font/raleway"
                android:textSize="12sp"
                android:textStyle="normal"
                android:layout_marginStart="250dp"
                android:layout_marginEnd="1dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                />
            <ImageView
                android:id="@+id/see_all_categories"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:paddingStart="1dp"
                android:paddingEnd="2dp"
                android:src="@drawable/arrow_button_right" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:id="@+id/categoryName"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_items"
                android:fontFamily="@font/raleway"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:fontFamily="@font/raleway"
                android:textSize="12sp"
                android:textStyle="normal"
                android:layout_marginStart="250dp"
                android:layout_marginEnd="2dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                />
            <ImageView
                android:id="@+id/see_all_new_items"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:paddingStart="1dp"
                android:paddingEnd="2dp"
                android:src="@drawable/arrow_button_right" />

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:id="@+id/new_items"
            />

    </LinearLayout>


</ScrollView>